# FaceKit

./: CMakeLists.txt  README.md
sample/: face_pipeline.cpp
src/: CMakeLists.txt  config.h  face_kit.cpp  face_kit.h
